# StudyBot

./: CS_260325.csv  CS_decoded.txt  README.md  add_cards.py  add_cards2.py
InterviewStudyMFC/: AddPage.cpp  AddPage.h  App.cpp  App.h  ConnectDlg.cpp  ConnectDlg.h  DBManager.cpp  DBManager.h  InterviewStudy.rc  ListPage.cpp  ListPage.h  MainDlg.cpp  MainDlg.h  resource.h  stdafx.h  targetver.h
StudyCard/: App.cpp  App.h  ConnectDlg.cpp  ConnectDlg.h  DBManager.cpp  DBManager.h  FlashPage.cpp  FlashPage.h  InputPage.cpp  InputPage.h  ListPage.cpp  ListPage.h  MainDlg.cpp  MainDlg.h  StudyCard.rc  resource.h  schema.sql  stdafx.h  targetver.h
Unreal/: UE5_Framework_Creation_Order.md
UnrealStudyBot/: .gitignore  README.md  UnrealStudyBot.sln  UnrealStudyBot.uproject
backend/: .env.example  package.json  server.js
card/: StudyBot_cards_grouped_20260418.xlsx  cpp_flashcards_with_tail.xlsx  cpp_tech_interview_flashcards.tsv  cpp_tech_interview_flashcards.xlsx  flashcards_classified.xlsx  modern_cpp_interview_50.xlsx  server_dev_interview_questions.xlsx  unreal_interview_qa.xlsx  기술면접_플래시카드.xlsx
docs/: 01_Architecture.md  02_Backend.md  03_UnrealEngine.md  04_DataFlow.md  05_TestGuide.md  06_Flowcharts.md  README.md  (+3 more)
server/: CMakeLists.txt  config.json
server/src/: main.cpp
server/src/controllers/: AuthController.cpp  AuthController.h  CardsController.cpp  CardsController.h  LobbyController.cpp  LobbyController.h  ProgressController.cpp  ProgressController.h
server/src/filters/: JwtFilter.cpp  JwtFilter.h
server/src/ws/: LobbyWebSocket.cpp  LobbyWebSocket.h
(+675 files in other folders)
